Fixed mobile layout issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,9 +14,21 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;700&display=swap');
 
+html {
+  width: 100%;
+  height: 100%;
+  background-color: #1a1a1a;
+}
+
 body {
+  width: 100%;
+  height: 100%;
   font-family: 'Cinzel', sans-serif;
-  background-color: #212121;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
 }
 
 ::-webkit-scrollbar {
